Various changes to reduce css and adding build folder for easy publishing online

--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -1,4 +1,13 @@
 // =============================================
+// header
+// =============================================
+
+.header {
+    margin-bottom: 8vh;
+}
+
+
+// =============================================
 // current menu item
 // =============================================
 
