--- a/src/scss/_theme.scss
+++ b/src/scss/_theme.scss
@@ -25,6 +25,11 @@
     }
 }
 
+
+// =============================================
+// Black Text
+// =============================================
+
 %t-color-black {
     color: $dark-grey;
 
