--- a/src/scss/_typography.scss
+++ b/src/scss/_typography.scss
@@ -1,18 +1,4 @@
 // =============================================
-// Font Anti aliasing magic
-// =============================================
-
-// @media only screen and (-webkit-min-device-pixel-ratio: 1.25),
-// only screen and ( min-device-pixel-ratio: 1.25),
-// only screen and ( min-resolution: 200dpi),
-// only screen and ( min-resolution: 1.25dppx) {
-//     html {
-//         -webkit-font-smoothing: subpixel-antialiased;
-//     }
-// }
-
-
-// =============================================
 // Typography
 // =============================================
 
@@ -35,15 +21,7 @@ html {
 }
 
 body {
-    padding: 1.618em;
-
-    @media(min-width: $screen-sm) {
-        padding: 3em;
-    }
-
-    @media(min-width: $screen-md) {
-        padding: 4em;
-    }
+    padding: 6vw;
 }
 
 p, ul, ol {
