--- a/src/scss/_heading.scss
+++ b/src/scss/_heading.scss
@@ -18,6 +18,7 @@ h1, h2, h3,
 
 h1, .h1 {
     font-size: $h1-font-size;
+    font-weight: 900;
 
     @media(min-width: $screen-sm) {
         font-size: $h1-font-size * 1.25;
