Adding big dave splat on homepage

--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -11,7 +11,8 @@
 // =============================================
 
 .home {
-    background-color: $turquoise;
+    background: $turquoise url(/wp-content/themes/system/build/img/dave.svg) no-repeat center center;
+    background-size: cover;
     @extend %t-color-black;
 
     .logo-icon {
