Reverting to old homepage - for now

--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -11,8 +11,7 @@
 // =============================================
 
 .home {
-    background: $turquoise url(/wp-content/themes/system/build/img/dave.svg) no-repeat center center;
-    background-size: cover;
+    background: $turquoise;
     @extend %t-color-black;
 
     .logo-icon {
