Making turquoise less harsh

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -9,7 +9,7 @@ $light-grey             : #f9f9f5;
 $black                  : #000;
 $white                  : #fff;
 
-$turquoise              : #49FFF7;
+$turquoise              : #4FF5E1;
 $yellow                 : #ffd800;
 $blue                   : #4A7BF1;
 $red                    : #f34059;
