--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -9,9 +9,9 @@ $light-grey             : #f9f9f5;
 $black                  : #000;
 $white                  : #fff;
 
-$turquoise              : #4FF5E1;
+$turquoise              : #84FFF0;
 $yellow                 : #ffd800;
-$blue                   : #4A7BF1;
+$blue                   : #1544FF;
 $red                    : #f34059;
 
 
