--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -9,10 +9,11 @@ $light-grey             : #f9f9f5;
 $black                  : #000;
 $white                  : #fff;
 
-$turquoise              : #84FFF0;
-$yellow                 : #ffd800;
-$blue                   : #1544FF;
-$red                    : #f34059;
+$turquoise              : #84FFF0; // not in use
+$salmon                 : #FFBCBC;
+$yellow                 : #FFF667; // not in use
+$blue                   : #2D57FB;
+$red                    : #f34059; // not in use
 
 
 // =============================================
