Adding text highlight colour

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -10,9 +10,9 @@ $black                  : #000;
 $white                  : #fff;
 
 $turquoise              : #84FFF0; // not in use
-$salmon                 : #FFBCBC;
-$yellow                 : #FFF667; // not in use
-$blue                   : #2D57FB;
+$salmon                 : #FFBCBC; // not in use
+$yellow                 : #FFF667;
+$blue                   : #0f73ee;
 $red                    : #f34059; // not in use
 
 
