--- a/src/scss/_typography.scss
+++ b/src/scss/_typography.scss
@@ -46,7 +46,7 @@ ul, ol {
     }
 
     > * {
-        margin-bottom: 0.5em;
+        margin-bottom: 0.2em;
     }
 }
 
@@ -103,6 +103,10 @@ hr {
     border-bottom: 2px solid $grey;
     margin-top: 2.618em;
     margin-bottom: 2.618em;
+}
+
+iframe {
+    width: 100%;
 }
 
 
