--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -63,7 +63,7 @@
         width: 50%;
     }
 
-    @media(min-width: $screen-xl) {
+    @media(min-width: $screen-lg) {
         width: 33.33%;
     }
 }
