--- a/src/scss/_heading.scss
+++ b/src/scss/_heading.scss
@@ -69,18 +69,14 @@ h3, .h3 {
     // }
 }
 
-// h4, .h4 {
-//     font-size: $h4-font-size;
-//
-//     @media(min-width: $screen-md) {
-//         font-size: $h4-font-size * 1.1;
-//     }
-//
-//     @media(min-width: $screen-lg) {
-//         font-size: $h4-font-size * 1.2;
-//     }
-//
-//     @media(min-width: $screen-xl) {
-//         font-size: $h4-font-size * 1.3;
-//     }
-// }
+h4, .h4 {
+    font-size: $h4-font-size;
+
+    @media(min-width: $screen-md) {
+        font-size: $h4-font-size * 1.1;
+    }
+
+    @media(min-width: $screen-lg) {
+        font-size: $h4-font-size * 1.2;
+    }
+}
