--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -14,6 +14,8 @@ $salmon                 : #FFBCBC; // not in use
 $yellow                 : #FFF667;
 $blue                   : #0f73ee;
 $red                    : #f34059; // not in use
+$purple                 : #401147;
+$green                  : #04f081;
 
 
 // =============================================
