Making photos variable width and height on listing

--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -67,3 +67,14 @@
         width: 33.33%;
     }
 }
+
+
+// =============================================
+// Center grid
+// =============================================
+
+.g-center > * {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
