--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -5,36 +5,13 @@
 [class*="g-t"] {
     display: flex;
     flex-flow: wrap;
-    margin-left: -1em;
-    margin-right: -1em;
-
-    @media(min-width: $screen-lg) {
-        margin-left: -1.25em;
-        margin-right: -1.25em;
-    }
-
-    @media(min-width: $screen-xl) {
-        margin-left: -1.5em;
-        margin-right: -1.5em;
-    }
+    margin-left: -2vw;
+    margin-right: -2vw;
 
     > * {
-        padding-left: 1em;
-        padding-right: 1em;
-        margin-bottom: 2em;
-
-        @media(min-width: $screen-lg) {
-            padding-left: 1.25em;
-            padding-right: 1.25em;
-            margin-bottom: 2.5em;
-        }
-
-        @media(min-width: $screen-xl) {
-            padding-left: 1.5em;
-            padding-right: 1.5em;
-            margin-bottom: 3em;
-            max-width: 34em;
-        }
+        padding-left: 2vw;
+        padding-right: 2vw;
+        margin-bottom: 4vw;
     }
 }
 
@@ -43,7 +20,8 @@
 // Two column
 // =============================================
 
-.g-two-up > * {
+.g-two-up > *,
+.g-three-up > * {
     width:100%;
 
     @media(min-width: $screen-sm) {
@@ -56,14 +34,8 @@
 // Three column
 // =============================================
 
+@media(min-width: $screen-xl) {
 .g-three-up > * {
-    width:100%;
-
-    @media(min-width: $screen-sm) {
-        width: 50%;
-    }
-
-    @media(min-width: $screen-lg) {
         width: 33.33%;
     }
 }
@@ -77,4 +49,9 @@
     display: flex;
     align-items: center;
     justify-content: center;
+
+    * {
+        display: block;
+        width: 100%;
+    }
 }
