Changing photography section to masonry grid. Cahnging related to photos to a list of titles, removing two column layout for photo detail

--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -41,17 +41,17 @@
 }
 
 
-// =============================================
-// Center grid
-// =============================================
-
-.g-center > * {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-
-    * {
-        display: block;
-        width: 100%;
-    }
-}
+// // =============================================
+// // Center grid
+// // =============================================
+//
+// .g-center > * {
+//     display: flex;
+//     align-items: center;
+//     justify-content: center;
+//
+//     * {
+//         display: block;
+//         width: 100%;
+//     }
+// }
