--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -9,13 +9,15 @@ $light-grey             : #f9f9f5;
 $black                  : #000;
 $white                  : #fff;
 
-$turquoise              : #84FFF0; // not in use
-$salmon                 : #FFBCBC; // not in use
-$yellow                 : #FFF667;
-$blue                   : #0f73ee;
-$red                    : #f34059; // not in use
 $purple                 : #340f3a;
 $green                  : #4cf5a6;
+$blue                   : #0f73ee;
+
+$turquoise              : #84FFF0; // not in use
+$salmon                 : #FFBCBC; // not in use
+$yellow                 : #FFF667; // not in use
+$red                    : #f34059; // not in use
+
 
 
 // =============================================
