Fixing image bugs and making image sizes more generic after removing square crop

--- a/src/scss/_utility.scss
+++ b/src/scss/_utility.scss
@@ -91,3 +91,12 @@
         bottom: -2px;
     }
 }
+
+
+// =============================================
+// Full width
+// =============================================
+
+.u-full {
+    width: 100%;
+}
