--- a/src/scss/_utility.scss
+++ b/src/scss/_utility.scss
@@ -100,3 +100,14 @@
 .u-full {
     width: 100%;
 }
+
+
+// =============================================
+// Portrait photo
+// =============================================
+
+.u-portait {
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+}
