--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -2,29 +2,17 @@
 // Grid
 // =============================================
 
-[class*="g-t"] {
+.g-two-up {
     display: flex;
     flex-flow: wrap;
-    margin-left: -4vw;
-    margin-right: -4vw;
+    justify-content: space-between;
 
     > * {
-        padding-left: 4vw;
-        padding-right: 4vw;
         margin-bottom: 8vw;
-    }
-}
-
-
-// =============================================
-// Two column
-// =============================================
-
-.g-two-up > * {
-    width:100%;
-
-    @media(min-width: $screen-sm) {
-        width: 50%;
+        width: 100%;
+        
+        @media(min-width: $screen-sm) {
+        width: calc(50% - 8vw);
     }
 }
 
