Adding active state to logo for when you tab to it

--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -21,7 +21,9 @@
         color: $dark-grey;
 
         &:hover,
-        &:hover span {
+        &:hover span,
+        &:active,
+        &:active span {
             opacity: 1;
         }
     }
