Adding tab highlighting

--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -22,8 +22,8 @@
 
         &:hover,
         &:hover span,
-        &:active,
-        &:active span {
+        &:focus,
+        &:focus span {
             opacity: 1;
         }
     }
