Improving accessibility by highlting links when tabbing

--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -26,6 +26,21 @@
         &:focus span {
             opacity: 1;
         }
+
+        &:focus,
+        &:focus span {
+            color: $light-grey;
+        }
+
+        &:focus {
+            .logo-icon {
+                background-color: $white;
+
+                &:after {
+                    border-bottom-color: $dark-grey;
+                }
+            }
+        }
     }
     span {
         opacity: 0;
