Improving ratio utility in css

--- a/src/scss/_utility.scss
+++ b/src/scss/_utility.scss
@@ -80,8 +80,8 @@
     position: relative;
 	overflow: hidden;
     padding-top: 100%;
-    overflow: hidden;
     background-color: $dark-grey;
+    display: block;
 
     > * {
         position: absolute;
