--- a/src/scss/_heading.scss
+++ b/src/scss/_heading.scss
@@ -17,66 +17,54 @@ h1, h2, h3,
 
 
 h1, .h1 {
-    font-size: $h1-font-size;
+    font-size: $h1-font-size; // 2em
     font-weight: 900;
 
     @media(min-width: $screen-sm) {
-        font-size: $h1-font-size * 1.25;
+        font-size: $h1-font-size * 1.25; // 2.5em
     }
 
     @media(min-width: $screen-md) {
-        font-size: $h1-font-size * 1.35;
+        font-size: $h1-font-size * 1.35; // 2.7em
     }
 
     @media(min-width: $screen-lg) {
-        font-size: $h1-font-size * 1.5;
+        font-size: $h1-font-size * 1.5; // 3em
     }
-
-    // @media(min-width: $screen-xl) {
-    //     font-size: $h1-font-size * 1.75;
-    // }
 }
 
 h2, .h2 {
-    font-size: $h2-font-size;
+    font-size: $h2-font-size; // 1.5em
 
     @media(min-width: $screen-md) {
-        font-size: $h2-font-size * 1.1;
+        font-size: $h2-font-size * 1.1; // 1.65em
     }
 
     @media(min-width: $screen-lg) {
-        font-size: $h2-font-size * 1.2;
+        font-size: $h2-font-size * 1.2; // 1.8em
     }
-
-    // @media(min-width: $screen-xl) {
-    //     font-size: $h2-font-size * 1.3;
-    // }
 }
 
 h3, .h3 {
-    font-size: $h3-font-size;
+    font-size: $h3-font-size; // 1.2em
 
     @media(min-width: $screen-md) {
-        font-size: $h3-font-size * 1.1;
+        font-size: $h3-font-size * 1.1;  // 1.32em
     }
 
     @media(min-width: $screen-lg) {
-        font-size: $h3-font-size * 1.2;
+        font-size: $h2-font-size; // 1.44em
     }
-
-    // @media(min-width: $screen-xl) {
-    //     font-size: $h3-font-size * 1.3;
-    // }
 }
 
 h4, .h4 {
-    font-size: $h4-font-size;
+    font-size: $h4-font-size; // 1em
 
     @media(min-width: $screen-md) {
-        font-size: $h4-font-size * 1.1;
+        font-size: $h4-font-size * 1.1; // 1.1em
     }
 
     @media(min-width: $screen-lg) {
-        font-size: $h4-font-size * 1.2;
+        font-size: $h4-font-size * 1.2; // 1.2em
     }
 }
