Hover style fixesg

--- a/src/scss/_typography.scss
+++ b/src/scss/_typography.scss
@@ -128,6 +128,7 @@ a,
         background-color: $blue;
         color: $light-grey !important;
         outline: 0.2em solid $blue;
+        opacity: 1;
     }
 }
 
