--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -21,6 +21,29 @@
 }
 
 
+.g-four-up {
+    display: flex;
+    flex-flow: wrap;
+    margin-left: -4vw;
+    margin-right: -4vw;
+
+    > * {
+        margin-bottom: 2vw;
+        padding-left: 4vw;
+        padding-right: 4vw;
+        width: 100%;
+
+        @media(min-width: $screen-sm) {
+            width: 50%;
+        }
+
+        @media(min-width: $screen-md) {
+            width: 25%;
+        }
+    }
+}
+
+
 // =============================================
 // Center grid
 // =============================================
