--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -2,44 +2,34 @@
 // Grid
 // =============================================
 
-.g-two-up {
+.g-two-up,
+.g-four-up {
     display: flex;
     flex-flow: wrap;
-    margin-left: -4vw;
-    margin-right: -4vw;
+    margin-left: -3vw;
+    margin-right: -3vw;
 
     > * {
-        margin-bottom: 8vw;
-        padding-left: 4vw;
-        padding-right: 4vw;
         width: 100%;
-
-        @media(min-width: $screen-sm) {
-            width: 50%;
-        }
+        padding-left: 3vw;
+        padding-right: 3vw;
     }
 }
 
 
-.g-four-up {
-    display: flex;
-    flex-flow: wrap;
-    margin-left: -4vw;
-    margin-right: -4vw;
+.g-two-up > * {
+    @media(min-width: $screen-sm) {
+        width: 50%;
+    }
+}
 
-    > * {
-        margin-bottom: 2vw;
-        padding-left: 4vw;
-        padding-right: 4vw;
-        width: 100%;
+.g-four-up > * {
+    @media(min-width: $screen-sm) {
+        width: 50%;
+    }
 
-        @media(min-width: $screen-sm) {
-            width: 50%;
-        }
-
-        @media(min-width: $screen-md) {
-            width: 25%;
-        }
+    @media(min-width: $screen-md) {
+        width: 25%;
     }
 }
 
@@ -59,4 +49,13 @@
 
 .g-limit > * {
     max-width: $screen-sm;
+}
+
+
+// =============================================
+// Gutter
+// =============================================
+
+.g-gutter-y > * {
+    margin-bottom: 6vw;
 }
