--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -6,16 +6,11 @@
 .g-four-up {
     display: flex;
     flex-flow: wrap;
-    margin-left: -3vw;
-    margin-right: -3vw;
 
     > * {
         width: 100%;
-        padding-left: 3vw;
-        padding-right: 3vw;
     }
 }
-
 
 .g-two-up > * {
     @media(min-width: $screen-sm) {
@@ -44,6 +39,20 @@
 
 
 // =============================================
+// Flex grid
+// =============================================
+
+.g-flex > * {
+    display: flex;
+    flex-flow: column;
+
+    > * {
+        flex-grow: 1;
+    }
+}
+
+
+// =============================================
 // Limit width
 // =============================================
 
@@ -57,5 +66,25 @@
 // =============================================
 
 .g-gutter-y > * {
-    margin-bottom: 6vw;
+    margin-bottom: 4vw;
+}
+
+.g-gutter-x {
+    margin-left: -2vw;
+    margin-right: -2vw;
+
+    > * {
+        padding-left: 2vw;
+        padding-right: 2vw;
+    }
+}
+
+.g-gutter-x-lg {
+    margin-left: -4vw;
+    margin-right: -4vw;
+
+    > * {
+        padding-left: 4vw;
+        padding-right: 4vw;
+    }
 }
