--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -13,6 +13,13 @@
 
 
 // =============================================
+// Functions
+// =============================================
+
+@import "function";
+
+
+// =============================================
 // Site styles
 // =============================================
 
