--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -12,12 +12,7 @@ $white                  : #fff;
 $purple                 : #340f3a;
 $green                  : #4cf5a6;
 $blue                   : #0f73ee;
-
-$turquoise              : #84FFF0; // not in use
-$salmon                 : #FFBCBC; // not in use
-$yellow                 : #FFF667; // not in use
-$red                    : #f34059; // not in use
-
+$red                    : #f34059;
 
 
 // =============================================
@@ -44,12 +39,7 @@ $border-radius          : 0.15em;
 // Heading
 // =============================================
 
-$heading-line-height    : 1.318;
-
-$h1-font-size           : 2em;
-$h2-font-size           : 1.5em;
-$h3-font-size           : 1.2em;
-$h4-font-size           : 1em;
+$heading-line-height    : 1.3;
 
 
 // =============================================
@@ -65,3 +55,33 @@ $screen-xs-max          : $screen-sm - 0.01em;
 $screen-sm-max          : $screen-md - 0.01em;
 $screen-md-max          : $screen-lg - 0.01em;
 $screen-lg-max          : $screen-xl - 0.01em;
+
+
+// =============================================
+// Typescale
+// =============================================
+
+$typescale: (
+	min: 1.2,
+	max: 1.333
+);
+
+
+// =============================================
+// Range for type
+// =============================================
+
+$range: (
+	min: $screen-sm,
+	max: $screen-xl
+);
+
+
+// =============================================
+// Start type and set units
+// =============================================
+
+$start: (
+	min: 1 / map-get($typescale, min) * 1em,
+	max: 1 / map-get($typescale, max) * 1em
+);
