--- a/src/scss/_typography.scss
+++ b/src/scss/_typography.scss
@@ -14,6 +14,10 @@ html {
     @media(min-width: $screen-lg) {
         font-size: 120%;
     }
+
+    // @media(min-width: $screen-xl) {
+    //     font-size: 130%;
+    // }
 }
 
 ::selection {
