--- a/src/scss/_typography.scss
+++ b/src/scss/_typography.scss
@@ -117,6 +117,8 @@ a,
 %link {
     color: $blue;
     touch-action: manipulation;
+    text-decoration: none;
+    box-shadow: 0 1px 0 0 currentColor;
 
     &:hover {
         opacity: 0.5;
@@ -128,6 +130,10 @@ a,
         outline: 0.2em solid $blue;
         opacity: 1;
     }
+}
+
+a.no-style {
+    box-shadow: 0 0 0 0;
 }
 
 
