Removing conversions from screen breakpoints.

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -46,10 +46,10 @@ $heading-line-height    : 1.3;
 // Breakpoints
 // =============================================
 
-$screen-sm              : 35em; // 560
-$screen-md              : 59em; // 915
-$screen-lg              : 66em; // 1140
-$screen-xl              : 90em; // 1574
+$screen-sm              : 35em;
+$screen-md              : 59em;
+$screen-lg              : 66em;
+$screen-xl              : 90em;
 
 $screen-xs-max          : $screen-sm - 0.01em;
 $screen-sm-max          : $screen-md - 0.01em;
