--- a/src/scss/_typography.scss
+++ b/src/scss/_typography.scss
@@ -64,8 +64,8 @@ blockquote {
     padding-left: 1.618em;
     margin-left: 0;
 
-    > p {
-        @extend %h3;
+    p {
+        @extend %h4;
         font-weight: normal;
         line-height: $base-line-height;
         font-family: $serif-font-family;
@@ -108,7 +108,7 @@ hr {
 }
 
 iframe {
-    width: 100%;
+    @extend %u-full;
 }
 
 
