--- a/src/scss/_typography.scss
+++ b/src/scss/_typography.scss
@@ -62,7 +62,7 @@ ul, ol {
 blockquote {
     border-left: 3px solid $grey;
     padding-left: 1.618em;
-    margin-left: 0;
+    margin: 3vw 0;
 
     p {
         @extend %h4;
