Adding lazyloader to photography section

--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -39,7 +39,7 @@
         opacity: 0;
         display: inline-block;
         margin-left: 0.5em;
-        transition: opacity 0.3s ease;
+        transition: opacity .3s;
     }
 }
 
