Lazy load improvements

--- a/src/scss/_heading.scss
+++ b/src/scss/_heading.scss
@@ -2,8 +2,7 @@
 // Heading
 // =============================================
 
-h1, h2, h3, h4, h5, h6,
-.h1, .h2, .h3, .h4, .h5, .h6 {
+h1, h2, h3, h4, h5, h6 {
     color: $dark-grey;
     margin-bottom: 0.6em;
     line-height: $heading-line-height;
