--- a/src/scss/photography.scss
+++ b/src/scss/photography.scss
@@ -15,7 +15,7 @@
     @extend %t-color-white;
 
     .logo-icon {
-        background-color: $white;
+        background-color: $light-grey;
 
         &:after {
             border-bottom-color: $dark-grey;
