--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -2,28 +2,21 @@
 // Grid
 // =============================================
 
-.g-two-up,
-.g-four-up {
+.grid {
     display: flex;
     flex-flow: wrap;
 
     > * {
         width: 100%;
+
+        @media(min-width: $screen-sm) {
+            width: 50%;
+        }
     }
 }
 
-.g-two-up > * {
-    @media(min-width: $screen-sm) {
-        width: 50%;
-    }
-}
-
-.g-four-up > * {
-    @media(min-width: $screen-sm) {
-        width: 50%;
-    }
-
-    @media(min-width: $screen-md) {
+@media(min-width: $screen-md) {
+    .g-four-up > * {
         width: 25%;
     }
 }
@@ -65,27 +58,7 @@
 // Gutter
 // =============================================
 
-.g-gutter-y > * {
-    margin-bottom: 7vw;
-    margin-bottom: 7vmax;
-}
-
-.g-gutter-y-xl > * {
-    margin-bottom: 14vw;
-    margin-bottom: 14vmax;
-}
-
 .g-gutter-x {
-    margin-left: -2vw;
-    margin-right: -2vw;
-
-    > * {
-        padding-left: 2vw;
-        padding-right: 2vw;
-    }
-}
-
-.g-gutter-x-lg {
     margin-left: -4vw;
     margin-right: -4vw;
 
