--- a/src/scss/_typography.scss
+++ b/src/scss/_typography.scss
@@ -7,7 +7,7 @@ html {
     line-height: $base-line-height;
     color: $grey;
     background-color: $light-grey;
-    -webkit-text-size-adjust: 100%;
+    -webkit-text-size-adjust: none;
     font-size: 110%;
 
 
