--- a/src/scss/_utility.scss
+++ b/src/scss/_utility.scss
@@ -25,8 +25,8 @@
     margin-bottom: 7vmax;
 
     &-lg {
-        margin-bottom: 18vw;
-        margin-bottom: 18vmax;
+        margin-bottom: 14vw;
+        margin-bottom: 14vmax;
     }
 }
 
@@ -86,14 +86,29 @@
 
 
 // =============================================
-// Portrait photo
+// Center
+// =============================================
+
+%u-center {
+    margin-left: auto;
+    margin-right: auto;
+}
+
+
+// =============================================
+// Orientation
 // =============================================
 
 %u-portrait,
 .u-portait {
-    width: 80%;
-    margin-left: auto;
-    margin-right: auto;
+    @extend %u-center;
+    width: 70%;
+}
+
+%u-landscape,
+.u-landscape {
+    @extend %u-center;
+    width: 85%;
 }
 
 
