Adding form styling and newsletter

--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -46,7 +46,7 @@
         position: absolute;
         height: 0.7em;
         width: 0.7em;
-        background-color: $light-grey;
+        background-color: $lighter-grey;
     }
 
     &:before {
