--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -76,3 +76,16 @@
         margin-bottom: 4vw;
     }
 }
+
+
+// =============================================
+// Flag
+// =============================================
+
+.flag {
+    display: flex;
+
+    > *:last-child {
+        flex-shrink: 1;
+    }
+}
