--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -4,7 +4,8 @@
 
 $dark-grey              : #111;
 $grey                   : #444;
-$light-grey             : #f9f9f5;
+$light-grey             : rgba(0,0,0,0.2);
+$lighter-grey           : #f9f9f5;
 
 $white                  : #fff;
 
