--- a/src/scss/_heading.scss
+++ b/src/scss/_heading.scss
@@ -4,6 +4,7 @@
 
 h1, h2, h3, h4, h5, h6 {
     color: $dark-grey;
+    font-weight: 700;
     margin-bottom: 0.6em;
     line-height: $heading-line-height;
 }
