Improving css file size

--- a/src/scss/photography.scss
+++ b/src/scss/photography.scss
@@ -7,6 +7,41 @@
 
 
 // =============================================
+// Ratio
+// =============================================
+
+.u-ratio {
+    position: relative;
+	overflow: hidden;
+    padding-top: 100%;
+    display: block;
+    background-size: cover;
+
+    > * {
+        position: absolute;
+        top: 0;
+        left: 0;
+        height: 100%;
+    }
+}
+
+
+// =============================================
+// Orientation
+// =============================================
+
+%u-portait,
+.u-portait {
+    width: 70%;
+}
+
+%u-landscape,
+.u-landscape {
+    width: 85%;
+}
+
+
+// =============================================
 // Home
 // =============================================
 
