--- a/src/scss/project.scss
+++ b/src/scss/project.scss
@@ -1,5 +1,21 @@
 @import "variables";
 
+
+// =============================================
+// Title
+// =============================================
+
+.title {
+    *:not(:last-child) {
+        margin-bottom: .1em;
+    }
+    *:last-child {
+        margin-top: .1em;
+        opacity: .6;
+    }
+}
+
+
 // =============================================
 // Project box
 // =============================================
